# sqpt_demo_00015751

./: README.md  pyproject.toml  pytest.ini  requirements-dev.txt  sonar-project.properties
.github/workflows/: ci.yml
app/: calculator.py  main.py
tests/api/: test_endpoints.py
tests/e2e/: test_browser.py
tests/unit/: test_calculator.py
